--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@
   margin-right: 5vw;
 }
 
-#show_result-area {
+#select {
   width: 35vw;
   height: 45vh;
   background-color: #fff;
@@ -128,7 +128,7 @@
     font-size: 16px;
   }
 
-  #show_result-area {
+  #select {
     width: 55vw;
     height: 45vh;
     font-size: 18px;
